--- a/TDESTRUCTOR/App Android/TDESTRUCTOR/app/src/main/res/layout/activity_main.xml
+++ b/TDESTRUCTOR/App Android/TDESTRUCTOR/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
         android:max="100"
         android:progress="50"
         android:rotation="90"
-        android:layout_marginTop="90dp"
-        android:layout_marginLeft="250dp"
-        />
+        android:layout_alignTop="@+id/seekBar1"
+        android:layout_toRightOf="@+id/seekBar1"
+        android:layout_toEndOf="@+id/seekBar1" />
 
     <ToggleButton
         android:layout_width="wrap_content"
