--- a/TDESTRUCTOR/App Android/TDESTRUCTOR/app/src/main/res/menu/menu_main.xml
+++ b/TDESTRUCTOR/App Android/TDESTRUCTOR/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
+    >
+
+    <item
+        android:id="@+id/title_state"
+        app:showAsAction="always"
+        android:title="@string/title_not_connected"
+        />
+
+    <item
+        android:id="@+id/secure_connect_scan"
+        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
+        app:showAsAction="ifRoom"
+        android:title="@string/secure_connect"
+        />
+
+
+
 </menu>
